--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: gray;
-    font-family: 'Fira Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Hind Guntur', Arial, Helvetica, sans-serif;
     color: #434343;
 }
 
@@ -48,8 +48,7 @@ main p{
     display: grid;
     grid-template-columns: 160px auto;
     gap: 5px;
-    margin-bottom: 20px;
-    margin-left: 5px;
+    margin: 0 5px 20px;
 }
 
 legend{
@@ -73,17 +72,6 @@ input {
     border: 1px solid #93913a;
 }
 
-::placeholder, ::-webkit-input-placeholder{
-    font-size: 0.9em;
-    color:#7a792d;
-}
-::-webkit-validation-bubble{
-    color: #000;
-    background-color: #93913a;
-}
-
-
-
 textarea{
     width: 70%;
     border: 1px solid #93913a;
@@ -102,7 +90,7 @@ textarea{
     box-shadow: 0 0 3px #6f6f6f;
     cursor: pointer;
     border-radius: 5px;
-    padding: 4px 8px;
+    padding: 7px 8px 3px;
     width: fit-content;
     margin: 0 auto;
     
@@ -114,3 +102,31 @@ textarea{
     
 }
 
+@media only screen and (max-width: 700px) {
+    main{
+        width: 80%;
+        padding: 15px;
+    }
+
+    .formcontainer{
+        display: block;
+        gap: 5px;
+        margin: 0 10px 20px;
+
+    }
+    label{
+        text-align: left;
+    }
+    input {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    textarea{
+        width: 100%;
+    }
+
+    #submit-btn{
+    margin-top: 10px;
+    }
+
+}
