--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,6 @@ main{
     height: 80vh;
     margin: 0 auto;
     padding: 25px;
-
     box-shadow: 0 0 5px #000;
 }
 
@@ -67,25 +66,26 @@ legend{
     display: block;
     width: 100%;
     border-bottom: 1px solid #93913a;
-    color: none;
     color: #93913a;
     margin-bottom: 8px;
+    padding-left: 3px;
 }
 
 label {
     text-align: right;
 }
 
-input {
+input, textarea {
     width: 70%;
     border: 1px solid #93913a;
     border-radius: 4px;
+    box-shadow: inset -1px 1px 2px #919191;
 }
 
-textarea{
-    width: 70%;
-    border: 1px solid #93913a;
-    border-radius: 4px;
+fieldset{
+    
+    border: 1px solid #bfbea1be;
+    
 }
 
 h2, h3{
@@ -115,7 +115,7 @@ h2{
     box-shadow: 0 0 3px #6f6f6f;
     cursor: pointer;
     border-radius: 5px;
-    padding: 7px 8px 3px;
+    padding: 3px 8px;
     width: fit-content;
     margin: 0 auto;
     
